# KeyCraftsman

./: MANIFEST.in  Makefile  README.md  __init__.py  excluder_chart.txt  requirements.txt  setup.cfg  setup.py
src/key_craftsman/: __init__.py  all_words.json  key_craftsman.py  key_qrcode.py
tests/: test_craftsman.py
