[metadata]
name = key_craftsman
version = 1.0.1
author = Yousef Abuzahrieh
author_email = yousefzahrieh17@gmail.com
description = A versatile key generation utility designed for generating secure keys with customizable features.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yousefabuz17/KeyCraftsman
download_url = https://github.com/yousefabuz17/KeyCraftsman.git
platforms = Windows, Linux, MacOS
license = Apache Software License
python_requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src